[tool.poetry]
name = "pw-hw-13"
version = "0.1.0"
description = ""
authors = ["Weiss1985 <weiss1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
requests = "^2.28.1"
xmltodict = "^0.13.0"
redis = "4.*"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.3"
cloudinary = "1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
